partially working semantic tokens

--- a/package.json
+++ b/package.json
@@ -25,12 +25,25 @@
           "Roan"
         ]
       }
-    ]
+    ],
+    "configuration": {
+      "roan-language-server.trace.server": {
+        "scope": "window",
+        "type": "string",
+        "enum": [
+          "off",
+          "messages",
+          "verbose"
+        ],
+        "default": "verbose",
+        "description": "Traces the communication between VS Code and the language server."
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "pnpm run package",
     "compile": "pnpm run lint && pnpm build",
-    "build": "tsup",
+    "build": "cd server && cargo build --release && cd .. && tsup",
     "watch": "npm-run-all -p watch:*",
     "package": "pnpm run lint && pnpm build --production",
     "lint": "eslint client"
