--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,3 +6,11 @@ edition = "2021"
 [dependencies]
 tower-lsp = "0.20.0"
 tokio = { version = "1.41.0", features = ["full"] }
+dashmap = "6.1.0"
+roan-engine = "0.1.6"
+serde_json = "1.0.132"
+tokio-util = "0.7.12"
+tracing-subscriber = "0.3.18"
+percent-encoding = "2.3.1"
+ropey = "1.6.1"
+roan-error = "0.1.0"
